--- a/styles/style.css
+++ b/styles/style.css
@@ -135,7 +135,7 @@ header .navigation .img-wrapper {
     height: 50%;
     width: auto;
 }
-
+/*media bar styles */
 .mediabar{
     position: absolute;
     bottom: 40px;
@@ -218,7 +218,7 @@ header .navigation .img-wrapper {
 
 
 /* mobile version */
-@media (max-width: 991px){
+@media (max-width: 765px){
     header{
         
         padding: 50px;
@@ -243,7 +243,7 @@ header .navigation .img-wrapper {
     
      .content .textBox h2 {
          color: #fff;
-         font-size: 3rem;
+         font-size: 3.5rem;
         
          margin-bottom: 20px;
          
@@ -266,6 +266,8 @@ header .navigation .img-wrapper {
         display: none;
        
    }
+
+
 
     .swiper-slide{
         background-position: center;
@@ -296,7 +298,7 @@ header .navigation .img-wrapper {
         width: 100%;
         height: 100%;
         background: black;
-        clip-path: polygon(20% 0%,83% 0%,100% 46%,100% 81%,100% 100%,15% 100%,0% 60%,0% 0%);
+       
        
     }
     header .navigation.active{
@@ -333,6 +335,8 @@ header .navigation .img-wrapper {
         
         position: fixed;
         margin-top: 5vh;
+     
+        right :20px;
         width: 30px;
         height: 30px;
         background-size: 30px;
@@ -344,10 +348,48 @@ header .navigation .img-wrapper {
     }
     .toggle.active{
         margin-top: 5vh;
+        right :20px;
         background-size: 30px;
         background: url("../img/close.png");
         background-repeat: no-repeat;
         background-position: center;
+    }
+
+
+    /* media bars  medium devices */
+    .mediabar{
+        position: absolute;
+        bottom: 50px;
+        left: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .mediabar li{
+        list-style: none;
+    }
+    .mediabar li a{
+        display: inline-block;
+        margin-left:15px ;
+        background: #222;
+        width: 30px;
+        height: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        transition: 0.2s ease-in-out;
+    
+    }
+    .mediabar li a:hover{
+        background: #e51e2a;
+        transform: translateY(-10px);
+    }
+    
+    .mediabar li a img{
+       filter: invert(1);
+       transform: scale(0.5);
     }
 }
 
@@ -379,7 +421,7 @@ header .navigation .img-wrapper {
 
     .content .textBox h2 {
         color: #fff;
-        font-size: 2rem;
+        font-size: 2.5rem;
        
         margin-bottom: 20px;
         
@@ -413,6 +455,14 @@ header .navigation .img-wrapper {
         justify-content: center;
     }
 
+    .mediabar{
+        position: absolute;
+        bottom: 25px;
+        left: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
     
 
 }
