--- a/styles/beerStyles.css
+++ b/styles/beerStyles.css
@@ -70,12 +70,15 @@
     color: red;
     font-family: 'Bangers', cursive;
     font-size: 2rem;
-    background: white;
+    background: black;
     border-radius: 6px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-bottom: 5vh;
 }
-
+.back-button:hover{
+    background: white;
+}
 
 
 /* ;arger screens */
@@ -112,10 +115,14 @@
         color: red;
         font-family: 'Bangers', cursive;
         font-size: 4rem;
-        background: white;
+        background: black;
         border-radius: 6px;
-        padding-left: 10px;
-        padding-right: 10px;
+        padding-left: 20px;
+        padding-right: 20px;
+        margin-bottom: 5vh;
+    }
+    .back-button:hover{
+        background: white;
     }
 
 
